--- a/default.config.yml
+++ b/default.config.yml
@@ -1,12 +1,49 @@
 ---
 downloads: ~/.ansible-downloads/
 
+configure_dock: yes
 configure_terminal: no
 configure_osx: no
+
+dockitems_disabled:
+  - Safari
+  - Contacts
+  - Notes
+  - Reminders
+  - Maps
+  - Photos
+  - Messages
+  - FaceTime
+  - iTunes
+  - iBooks
+  - App Store
+  - System Preferences
+  - Calendar
+
+dockitems_enabled:
+  - name: Google Chrome
+    path: "/Applications/Google Chrome.app"
+    pos: 1
+  - name: Firefox
+    path: "/Applications/Firefox.app"
+    pos: 2
+  - name: Slack
+    path: /Applications/Slack.app
+    pos: 3
+  - name: Atom
+    path: /Applications/Atom.app
+    pos: 4
+  - name: Visual Studio Code
+    path: /Applications/Visual Studio Code.app
+    pos: 5
+  - name: Terminal
+    path: /Applications/Utilities/Terminal.app
+    pos: 6
 
 homebrew_installed_packages:
   #- autoconf
   - bash-completion
+  - dockutil
   #- doxygen
   #- gettext
   #- gifsicle
