--- a/default.config.yml
+++ b/default.config.yml
@@ -100,6 +100,7 @@ homebrew_cask_apps:
   #- sublime-text
   #- transmit
   #- vagrant
+  - virtualbox
   - visual-studio-code
 
 # Glob pattern to ansible task files to run after all other tasks are finished.
