--- a/default.config.yml
+++ b/default.config.yml
@@ -103,7 +103,7 @@ homebrew_cask_apps:
   #- slack
   #- sublime-text
   #- transmit
-  #- vagrant
+  - vagrant
   - virtualbox
   - visual-studio-code
 
