--- a/mac.yml
+++ b/mac.yml
@@ -3,7 +3,7 @@
   connection: local
 
   vars_files:
-    - default.config.yml
+    - mac.config.yml
 
   pre_tasks:
     - include_vars: "{{ item }}"
