--- a/docker_ubuntu.yml
+++ b/docker_ubuntu.yml
@@ -4,37 +4,39 @@
   connection: local
 
   tasks:
-    - name: Install Docker Dependencies
-      apt: name={{ item }} state=latest update_cache=yes
-      with_items:
-        - apt-transport-https
-        - ca-certificates
-        - curl
-        - software-properties-common 
+    - name: "Install Docker Dependencies"
+      apt:
+        pkg:
+          - apt-transport-https
+          - ca-certificates
+          - curl
+          - software-properties-common
+        state: present
+        autoclean: yes
       tags: docker
 
-    - name: Get Docker key
+    - name: "Get Docker key"
       apt_key:
         url: https://download.docker.com/linux/ubuntu/gpg
         state: present
       tags: docker
 
-    - name: Add Docker packages to Repository
+    - name: "Add Docker packages to Repository"
       apt_repository:
         repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename|lower }} stable
       tags: docker
 
-    - name: Install Docker-CE
+    - name: "Install Docker-CE"
       apt: name="docker-ce" state=latest update_cache=yes
       tags: docker
 
-    - name: Check if Swarm has already been Initialized
+    - name: "Check if Swarm has already been Initialized"
       shell: docker node ls
       register: swarm_status
       ignore_errors: true
       tags: swarm
 
-    - name: Initialize Docker Swarm
+    - name: "Initialize Docker Swarm"
       shell: >
         docker swarm init
         --advertise-addr={{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:2377
@@ -42,12 +44,12 @@
       run_once: true
       tags: swarm
 
-    - name: Get the Manager join-token
+    - name: "Get the Manager join-token"
       shell: docker swarm join-token --quiet manager
       register: manager_token
       tags: swarm
 
-    - name: Get the worker join-token
+    - name: "Get the worker join-token"
       shell: docker swarm join-token --quiet worker
       register: worker_token
       tags: swarm
