--- a/docker_ubuntu.yml
+++ b/docker_ubuntu.yml
@@ -10,6 +10,7 @@
           - apt-transport-https
           - ca-certificates
           - curl
+          - gnupg-agent
           - software-properties-common
         state: present
         autoclean: yes
@@ -27,7 +28,7 @@
       tags: docker
 
     - name: "Install Docker-CE"
-      apt: name="docker-ce" state=latest update_cache=yes
+      apt: name="docker.io" state=latest update_cache=yes
       tags: docker
 
     - name: "Check if Swarm has already been Initialized"
