remove check for swarm and add some echos

--- a/docker_ubuntu.yml
+++ b/docker_ubuntu.yml
@@ -27,15 +27,15 @@
         repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename|lower }} stable
       tags: docker
 
-    - name: "Install Docker-CE"
+    - name: "Install Docker.io"
       apt: name="docker.io" state=latest update_cache=yes
       tags: docker
 
-    - name: "Check if Swarm has already been Initialized"
-      shell: docker node ls
-      register: swarm_status
-      ignore_errors: true
-      tags: swarm
+    #- name: "Check if Swarm has already been Initialized"
+    #  shell: docker node ls
+    #  register: swarm_status
+    #  ignore_errors: true
+    #  tags: swarm
 
     - name: "Initialize Docker Swarm"
       shell: >
