add crane to docker group

--- a/docker_ubuntu.yml
+++ b/docker_ubuntu.yml
@@ -65,6 +65,7 @@
       user:
         name: crane
         group: docker
+        groups: docker
         shell: /sbin/nologin
         append: yes
         comment: "Docker nologin User"
