--- a/media_server.yml
+++ b/media_server.yml
@@ -3,13 +3,36 @@
 - hosts: all
   connection: local
 
-  tasks:
-    - name: "ansible create directory with_items example"
+  tasks:    
+    - name: read the passwd file
+      shell: cat /etc/passwd
+      register: user_accts
+
+    - name: "create directories"
       file:
         path: "{{ item.dest }}"
+        owner: "{{ item.owner }}"
+        group: "{{ item.group }}"
         mode: "{{item.mode}}"
+        recurse: yes
         state: directory
       with_items:
-        - { dest: '/docker/jellyfin/config', mode: '0774'}
-        - { dest: '/docker/kodi', mode: '0774'}
-        - { dest: '/tank/Movies', mode: '0774'}
+        - { dest: '/docker/jellyfin/config', owner: 'crane', group: 'docker', mode: '0774'}
+        - { dest: '/docker/kodi', owner: 'crane', group: 'docker', mode: '0774'}
+        - { dest: '/tank/Movies', owner: 'crane', group: 'docker', mode: '0774'}
+      when: user_accts.stdout.find('vagrant') = -1
+
+    - name: "create directories for vagrant image"
+      file:
+        path: "{{ item.dest }}"
+        owner: "{{ item.owner }}"
+        group: "{{ item.group }}"
+        mode: "{{item.mode}}"
+        recurse: yes
+        state: directory
+      with_items:
+        - { dest: '/home/vagrant/code/docker/jellyfin/config', owner: 'crane', group: 'docker', mode: '0774'}
+        - { dest: '/home/vagrant/code/docker/kodi', owner: 'crane', group: 'docker', mode: '0774'}
+        - { dest: '/home/vagrant/code/docker/media', owner: 'crane', group: 'docker', mode: '0774'}
+      when: user_accts.stdout.find('vagrant') != -1
+      debug: msg="Found vagrant user..."
